exports[`fullscreen option + height 1`] = `
┌──────────────────────────────────────────────────────────┐
│foo                                                       │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
`;

exports[`fullscreen option + width 1`] = `
┌────────┐
│foo     │
└────────┘
`;

exports[`fullscreen option 1`] = `
┌──────────────────────────────────────────────────────────┐
│foo                                                       │
└──────────────────────────────────────────────────────────┘
`;

exports[`fullscreen option with callback 1`] = `
┌────────────────────────────────────────────────────────┐
│foo                                                     │
└────────────────────────────────────────────────────────┘
`;
